#97 Move the custom-inspection-in-subproject example into the codebase using sbt-scripted